--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ mapping_version=2023.09.03-1.20.1
 mod_id=bmnw
 mod_name=Bunkers, Machines & Nuclear Weapons
 mod_license=All Rights Reserved
-mod_version=0.0.7-[0002]
+mod_version=0.0.8
 mod_group_id=com.siepert.bunkersMachinesAndNuclearWeapons
 mod_authors=Siepert
 mod_description=A mod that adds nuclear tech to Minecraft, and much more!\n\nYes I am procrastinating on fixing the Scaffold model
